# Master-P2-EcoCity

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  eco_city_tmp_ui.py  needed.txt
.github/workflows/: deploy.yml
UI/: Cargo.toml
UI/assets/other/: test.png~
UI/assets/stable/: colorPallet.png~
UI/src/: main.rs  parser.rs
deployment/: build.sh
deployment/BEImage/: Dockerfile
deployment/UIImage/: Dockerfile
game-engine/: CMakeLists.txt  CMakePresets.json  Logger.hpp  Makefile  api_types.pb.cc  api_types.pb.h  main.cpp
game-engine/domain/: Building.cpp  Building.h  Building.hpp  BuildingType.hpp  City.cpp  City.h  City.hpp  Petition.cpp  Petition.h  Petition.hpp  Resource.cpp  Resource.h  Resource.hpp  ResourceEffect.h  ResourceEffect.hpp  ResourceType.h  ResourceType.hpp
game-engine/domain/buildings/: AirportExpansion.cpp  AirportExpansion.hpp  BuildingFactory.cpp  BuildingFactory.hpp  HydroelectricPlant.cpp  HydroelectricPlant.hpp  IndustrialZone.cpp  IndustrialZone.hpp  PowerPlant.cpp  PowerPlant.h  PowerPlant.hpp  PublicTransportUpgrade.cpp  PublicTransportUpgrade.hpp  RoadImprovement.cpp  RoadImprovement.hpp  RooftopSolar.cpp  RooftopSolar.hpp  SolarPanelFarm.cpp  SolarPanelFarm.hpp  UrbanGreening.cpp  UrbanGreening.hpp  WaterSavingInfrastructure.cpp  WaterSavingInfrastructure.hpp  WaterTreatmentPlant.cpp  WaterTreatmentPlant.hpp  WindTurbineFarm.cpp  WindTurbineFarm.hpp
game-engine/exceptions/: InsufficientResourcesException.hpp  PersistanceException.hpp  PersistenceException.hpp
game-engine/network/: ISocketServer.hpp  SocketServer.cpp  SocketServer.hpp
game-engine/observability/: Logger.hpp  SystemMetrics.hpp  Tracer.hpp
game-engine/persistence/: IGameRepository.hpp  MongoGameRepository.cpp  MongoGameRepository.hpp
game-engine/services/: GameService.cpp  GameService.h  GameService.hpp  IGameService.h  IGameService.hpp  PetitionManager.cpp  PetitionManager.h  PetitionManager.hpp  PopulationManager.h  PopulationManager.hpp  ResourceManager.cpp  ResourceManager.hpp
game-engine/tests/: GameServiceTest.cpp  IntegrationMongoTest.cpp  IntegrationSocketTest.cpp  PetitionManagerTest.cpp  ResourceManagerTest.cpp  delete_save.py  inspect_save.py
game_api/v1/: api_types.proto
mongo/: README.md
mongo/dump/Eco_city_game/: active_petitions.bson  active_petitions.metadata.json  current_petition.bson  current_petition.metadata.json  games.bson  games.metadata.json  petition_counts.bson  petition_counts.metadata.json  resources.bson  resources.metadata.json
